Blog page faq sectin overlap fixed & body scrollbar fixed

--- a/src/output.css
+++ b/src/output.css
@@ -2248,6 +2248,10 @@ details.collapse summary::-webkit-details-marker {
   top: 0px;
 }
 
+.z-50 {
+  z-index: 50;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -2269,12 +2273,16 @@ details.collapse summary::-webkit-details-marker {
   height: 8rem;
 }
 
+.h-\[calc\(100vh_-_16\.8rem\)\] {
+  height: calc(100vh - 16.8rem);
+}
+
 .h-full {
   height: 100%;
 }
 
-.min-h-\[80vh\] {
-  min-height: 80vh;
+.h-screen {
+  height: 100vh;
 }
 
 .w-full {
